@@ -10,7 +10,7 @@ mysql_user=root
 mysql_pw=fuck7me2
 mysql_db=poseidon
 
-max_concurent_checks=100
+max_concurent_checks=15
 
 shm_key=/var/tmp/
 
@@ -22,7 +22,7 @@ logfile=/var/log/bartlby
 basedir=/storage/SF.NET/BARTLBY/bartlby-core/
 daemon=true
 
-shm_size=80
+shm_size=7
 
 
 pidfile_dir=/var/run/
